[tool.poetry]
name = "grafana-sales"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "grafana_sales"}]

[tool.poetry.dependencies]
python = "3.8.10"
fast-bitrix24 = "^1.5.16"
pydantic = "^2"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
